--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,28 +1,17 @@
-.navbar-brand {
-  padding: 5px;
-  width: 90px; }
-
-/*#chain-description {
-	color: #0e385f;
-	font-family: 'lucida grande',tahoma,verdana,arial,sans-serif
-}*/
 #market-wrapper header h1 {
   color: #b19d6f; }
 #market-wrapper header .mbuttons a {
   margin-left: 2px; }
 
-#registration-title {
+.home-page-registration #registration-title {
   color: #b19d6f; }
-
-#main-registration-form {
+.home-page-registration #main-registration-form {
   color: #b19d6f; }
-
-#login-modal form {
+.home-page-registration #login-modal form {
   color: #b19d6f; }
-#login-modal #myModalLabel {
+.home-page-registration #login-modal #myModalLabel {
   color: #b19d6f !important; }
-
-.main-page-text {
+.home-page-registration .main-page-text {
   margin-left: 5px;
   color: #b19d6f; }
 
@@ -31,3 +20,22 @@
 		display: none;
 	}
 }*/
+.dashboard-panels {
+  margin: 25px -10px 0 -10px; }
+  .dashboard-panels .row {
+    margin-right: -10px !important;
+    margin-left: -10px !important; }
+  .dashboard-panels #company-contacts h3 {
+    margin-bottom: 30px; }
+  .dashboard-panels #company-contacts h4 {
+    width: 100%;
+    float: left; }
+  .dashboard-panels .sub-link {
+    color: #48cfad;
+    font-weight: bold; }
+
+#edit form {
+  margin-bottom: 35px; }
+
+#sidebar a:hover {
+  cursor: pointer; }
