worked on update company profile functions

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -20,6 +20,9 @@
 		display: none;
 	}
 }*/
+#logo-upload-progressbar, #logo-upload-form {
+  display: none; }
+
 .dashboard-panels {
   margin: 25px -10px 0 -10px; }
   .dashboard-panels .row {
