--- a/public/css/custom.scss
+++ b/public/css/custom.scss
@@ -77,3 +77,14 @@ $dashboard-color: #48cfad;
 		cursor: pointer;
 	}
 }
+
+// fake styles
+.search-test-panel {
+	margin: 10px 0 0 0;
+}
+
+.search-test-panel tbody tr:hover {
+	cursor: pointer;
+	color: #428bca;
+}
+// fake styles end
